--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -41,15 +41,15 @@ jobs:
     - name: Terraform Plan
       run: terraform plan
       working-directory: ./terraform-backend
-    # - name: Terraform Apply
-    #   run: terraform apply --auto-approve
-    #   working-directory: ./terraform-backend
+    - name: Terraform Apply
+      run: terraform apply --auto-approve
+      working-directory: ./terraform-backend
     - name: Look at app.py file
       run: cat app.py
       working-directory: ./backend-application
     - name: Copy app.py to S3 Bucket
       run: aws s3 cp app.py s3://$S3_BUCKET/backend/
       working-directory: ./backend-application
-    - name: Terraform destroy
-      run: terraform destroy --auto-approve
-      working-directory: ./terraform-backend
+    # - name: Terraform destroy
+    #   run: terraform destroy --auto-approve
+    #   working-directory: ./terraform-backend
