--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -71,12 +71,12 @@ jobs:
     - name: Terraform Plan
       run: terraform plan
       working-directory: ./terraform-backend
-    - name: Terraform Apply
-      run: terraform apply --auto-approve
-      working-directory: ./terraform-backend
-    # - name: Terraform destroy
-    #   run: terraform destroy --auto-approve
+    # - name: Terraform Apply
+    #   run: terraform apply --auto-approve
     #   working-directory: ./terraform-backend
+    - name: Terraform destroy
+      run: terraform destroy --auto-approve
+      working-directory: ./terraform-backend
     - name: Get Terraform output
       id: tf_output
       run: |
