--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -30,7 +30,7 @@ jobs:
       run: cat app.py
       working-directory: ./backend-application
     - name: Run test with pytest
-      run: pytest test_app.py -v
+      run: pytest test_app.py test_create_table.py -v
       working-directory: ./backend-application
 
   terraform-backend-deploy:
@@ -73,39 +73,17 @@ jobs:
     - name: Terraform Plan
       run: terraform plan
       working-directory: ./terraform-backend
-    # - name: Terraform Apply
-    #   run: terraform apply --auto-approve
-    #   working-directory: ./terraform-backend
-    - name: Terraform destroy
-      run: terraform destroy --auto-approve
+    - name: Terraform Apply
+      run: terraform apply --auto-approve
       working-directory: ./terraform-backend
+    # - name: Terraform destroy
+    #   run: terraform destroy --auto-approve
+    #   working-directory: ./terraform-backend
     - name: Get Terraform output
       id: tf_output
       run: |
         echo "writer_endpoint=$(terraform output -raw writer_endpoint)" >> "$GITHUB_OUTPUT"
       working-directory: ./terraform-backend
-    - name: Install MySQL Client
-      run: sudo apt-get install mysql-client -y
-    - name: Create table
-      env:
-        MYSQL_HOST: ${{ steps.tf_output.outputs.writer_endpoint }}
-        MYSQL_USER: ${{ secrets.MYSQL_USER }}
-        MYSQL_PASSWORD: ${{ secrets.MYSQL_PASSWORD }}
-        MYSQL_PORT: 3306
-        MYSQL_DB: webappdb
-        MYSQL_TABLE: orders
-      run: |
-        mysql -h $MYSQL_HOST -P $MYSQL_PORT -u $MYSQL_USER -p $MYSQL_PASSWORD <<EOF
-        USE \`$MYSQL_DB\`;
-        CREATE TABLE IF NOT EXISTS \`$MYSQL_TABLE\` (
-        	id INT AUTO_INCREMENT PRIMARY KEY,
-          customer_id VARCHAR(50) NOT NULL,
-          product_id VARCHAR(50) NOT NULL,
-          quantity INT NOT NULL,
-          order_date VARCHAR(50),
-          created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
-        );
-        EOF
     - name: Look at config.py file
       run: cat config.py
       working-directory: ./backend-application
