--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -141,7 +141,7 @@ jobs:
       run: cat config.js
       working-directory: ./frontend
     - name: Write URL to config.js
-      run: sed -i "s|\"dummy url\"|\"${{ needs.terraform-backend-deploy.outputs.output1 }}/ordersubmission\"|" config.js
+      run: sed -i "s|\"dummy url\"|\"http://${{ needs.terraform-backend-deploy.outputs.output1 }}/ordersubmission\"|" config.js
       working-directory: ./frontend
     - name: Look at config.js file
       run: cat config.js
